fix code headings, fix line spacing

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,7 @@ body {
 
 body p {
     font-size: 14px;
+    line-height: 24px;
     padding: 0.25rem 0rem 0.25rem 0rem;
 }
 
@@ -36,11 +37,14 @@ a:hover > code {
 }
 
 code {
-    font-size: 13px;
     color: #c7254e;
     background-color: #f8f9fa;
     border-radius: 3px;
     padding: 3px;
+}
+
+code p {
+    font-size: 13px;
 }
 
 pre code {
